--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://www.taylorrobinsonmusic.com/">
+        <meta http-equiv="refresh" content="0; url=https://www.amazon.com/gp/product/0525575863/ref=s9_acsd_simh_bw_c_x_1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-10&pf_rd_r=BAVP3J2QN9T4VDS3545P&pf_rd_t=101&pf_rd_p=a48686f2-3e3e-43da-91b7-756c8330420e&pf_rd_i=283155">
         <script type="text/javascript">
-            window.location.href = "https://www.taylorrobinsonmusic.com/"
+            window.location.href = "https://www.amazon.com/gp/product/0525575863/ref=s9_acsd_simh_bw_c_x_1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-10&pf_rd_r=BAVP3J2QN9T4VDS3545P&pf_rd_t=101&pf_rd_p=a48686f2-3e3e-43da-91b7-756c8330420e&pf_rd_i=283155"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://www.taylorrobinsonmusic.com/'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://www.amazon.com/gp/product/0525575863/ref=s9_acsd_simh_bw_c_x_1_w?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=merchandised-search-10&pf_rd_r=BAVP3J2QN9T4VDS3545P&pf_rd_t=101&pf_rd_p=a48686f2-3e3e-43da-91b7-756c8330420e&pf_rd_i=283155'>link to example</a>.
     </body>
 </html>
